# gcal-sync

./: .gitignore  LICENSE  Makefile  gcal-sync-config.json  pyproject.toml  readme.md  test.mk  todos.md
gcal_sync/: __init__.py  __main__.py  calendar.py  calendar_id_list.py  calendar_list.py  calendar_util.py  credentials.py  edition.py  event.py  run.py  utils.py
gcal_sync/click_types/: __init__.py  calendar_id_list.py  calendar_list.py  provider_info_list.py
gcal_sync/entriy_points/: __init__.py  clear.py  credentials.py  run.py
gcal_sync/gcp/: __init__.py  calendar.py  event.py  event_util.py
plist/: .gitignore  Makefile  gcal_sync.conf.jinja  info.hotoku.gcal-sync.plist.jinja  run  run.jinja
